adding alt to img tag

--- a/galeria_fotos.html
+++ b/galeria_fotos.html
@@ -9,25 +9,25 @@
 <body>
     <div class="container">
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
-            <img src="https://picsum.photos/200"> 
+            <img src="https://picsum.photos/200" alt="imagem 1"> 
         </div>
         <div class="box-img">
             <img src="https://picsum.photos/200"> 
